force/src/objects/Case_Resolution__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Reason_for_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_of_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution of Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Topic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Case Resolution</label>
</CustomObject>